--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multiselect-react-dropdown": "^2.0.25",
     "next": "^14.2.24",
     "next-auth": "^4.24.7",
+    "plotly.js-dist-min": "^3.3.0",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
