--- a/package.json
+++ b/package.json
@@ -36,12 +36,11 @@
     "@playwright/test": "^1.48.2",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.5.4",
+    "@types/plotly.js-dist-min": "^2.3.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-config-next": "14.2.10",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.1",
     "prettier-eslint": "^16.3.0",
