--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "playwright-development": "npx playwright test",
-    "lint" : "next lint"
+    "lint": "next lint"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
@@ -38,6 +38,7 @@
     "@types/node": "^22.5.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint-config-next": "16.0.6",
     "prisma": "^5.19.1",
     "typescript": "^5.4.5"
   }
