--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev-https": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
-    "playwright-development": "npx playwright test"
+    "playwright-development": "npx playwright test",
+     "lint": "echo 'Skipping lint'"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
